--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>any ffh  abr </h1>
     <h2>this is another</h2>
     <h3>we can trying too much</h3>
- 
+ <img src="gym.jpg" alt="">
 </body>
 </html>
