--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>this is another</h2>
     <h3>we can trying too much</h3>
  <img src="gym.jpg" alt="">
+ <img src="restaurant.jpg" alt="">
 </body>
 </html>
