--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>we can trying too much</h3>
  <img src="gym.jpg" alt="">
  <img src="restaurant.jpg" alt="">
+ <img src="photo/looplab.png" alt="">
 </body>
 </html>
