--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
  <img src="gym.jpg" alt="">
  <img src="restaurant.jpg" alt="">
  <img src="photo/looplab.png" alt="">
- 
+ <img src="academic.jpg" alt="">
+
 </body>
 </html>
