--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
  <img src="restaurant.jpg" alt="">
  <img src="photo/looplab.png" alt="">
  <img src="academic.jpg" alt="">
+ <div>new blog
+     <h5>look mama i can write</h5>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quae beatae illum autem ad? Assumenda magni, dolores eaque vitae velit vero, nobis esse molestiae quae nihil autem doloremque magnam placeat saepe tempora! Repudiandae ducimus voluptatum sequi quam, libero nihil modi?</p>
+ </div>
 
 </body>
 </html>
